--- a/category.html
+++ b/category.html
@@ -49,12 +49,24 @@
 
         <!-- cart container -->
         <section class="cart-container">
-            <a class="cart" href="#">
+            <a class="cart" href="cart.html">
                 <i class="bi bi-cart"></i>&nbsp;
                 <div class="no-addedtocart">
-                    <span>1</span>
+                    <span>0</span>
                 </div>
             </a>
+            <button href="#" class="user">
+                <i class="bi bi-person-fill"></i>&nbsp;
+                <div class="user-menu">
+                    <div class="user-menu-container">
+                        <a href="login.html" class="user-menu-child">Login</a>
+                        <span class="or">or</span>
+                        <a href="register.html" class="user-menu-child"
+                            >Register</a
+                        >
+                    </div>
+                </div>
+            </button>
         </section>
 
         <!-- header -->
