--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
             <a href="#contact_us">Contact Us</a>
         </div>
 
+        <!-- cart container -->
+        <section class="cart-container">
+            <a class="cart" href="cart.html">
+                <i class="bi bi-cart"></i>&nbsp;
+                <div class="no-addedtocart">
+                    <span>0</span>
+                </div>
+            </a>
+            <button href="#" class="user">
+                <i class="bi bi-person-fill"></i>&nbsp;
+                <div class="user-menu">
+                    <div class="user-menu-container">
+                        <a href="login.html" class="user-menu-child">Login</a>
+                        <span class="or">or</span>
+                        <a href="register.html" class="user-menu-child"
+                            >Register</a
+                        >
+                    </div>
+                </div>
+            </button>
+        </section>
+
         <!-- hero -->
         <section class="hero">
             <div class="hero-bg-title">
