Update user management logic

--- a/login.html
+++ b/login.html
@@ -86,6 +86,9 @@
         <!-- login -->
         <section class="login">
             <form class="login-form">
+                <div class="login-msg" id="error_login">
+                    <p class="login-msg-content"></p>
+                </div>
                 <div class="login-group-input">
                     <label for="email" class="login-label">Your Email</label>
                     <input
