--- a/register.html
+++ b/register.html
@@ -86,6 +86,9 @@
         <!-- register -->
         <section class="register">
             <form class="register-form">
+                <div class="register-msg" id="error_register">
+                    <p class="register-msg-content"></p>
+                </div>
                 <div class="register-group-input">
                     <label for="firstname" class="register-label"
                         >First Name</label
@@ -166,8 +169,8 @@
                     >
                     <input
                         type="password"
-                        name="password"
-                        id="password"
+                        name="confirmpassword"
+                        id="confirmpassword"
                         class="register-input"
                         autocomplete="off"
                         placeholder="&#9913;&#9913;&#9913;&#9913;&#9913;&#9913;&#9913;&#9913;"
