Update cart and checkout logic

--- a/cart.html
+++ b/cart.html
@@ -85,60 +85,7 @@
 
         <!-- cart -->
         <section class="cartlist">
-            <div class="cartlist-product">
-                <div class="cartlist-product-img">
-                    <img
-                        src="assets/laptop-honor-1.png"
-                        alt="cartlist-product-image"
-                        class="cartlist-product-image"
-                    />
-                </div>
-                <div class="cartlist-product-detail">
-                    <div class="cartlist-product-title">Honor Laptop</div>
-                    <div class="cartlist-product-action">
-                        <div class="cartlist-product-adjustquantity">
-                            <button class="decrease-btn"><i class="bi bi-chevron-left"></i></button>
-                            <input type="text" value="1" readonly />
-                            <button class="increase-btn"><i class="bi bi-chevron-right"></i></button>
-                        </div>
-                        <div class="cartlist-product-delete">
-                            <i class="bi bi-trash"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="cartlist-product-price"><h5 class="cartlist-product-price-title">TOTAL : RM 5000.00</h5></div>
-            </div>
-            <div class="cartlist-product">
-                <div class="cartlist-product-img">
-                    <img
-                        src="assets/laptop-lenovo-1.png"
-                        alt="cartlist-product-image"
-                        class="cartlist-product-image"
-                    />
-                </div>
-                <div class="cartlist-product-detail">
-                    <div class="cartlist-product-title">Lenovo Laptop</div>
-                    <div class="cartlist-product-action">
-                        <div class="cartlist-product-adjustquantity">
-                            <button class="decrease-btn"><i class="bi bi-chevron-left"></i></button>
-                            <input type="text" value="1" readonly />
-                            <button class="increase-btn"><i class="bi bi-chevron-right"></i></button>
-                        </div>
-                        <div class="cartlist-product-delete">
-                            <i class="bi bi-trash"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="cartlist-product-price"><h5 class="cartlist-product-price-title">TOTAL : RM 5000.00</h5></div>
-            </div>
-            <div class="cartlist-overall">
-                <h4 class="cartlist-overall-title">OVERALL TOTAL :</h4>
-                <h4 class="cartlist-overall-price">RM10 000.00</h4>
-            </div>
-            <div class="cartlist-group-btn">
-                <button class="btn-secondary" onclick="window.location.href = 'category.html?category=all';">CONTINUE SHOPPING</button>
-                <button class="btn-primary" onclick="window.location.href = 'checkout.html';">PROCEED TO CHECKOUT</button>
-            </div>
+            <!-- html will be injected here by javascript -->
         </section>
 
         <!-- footer -->
